--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <h6 class="links">Menu</h6>
      <h6 class="links">What's New</h6>
      <h6 class="links">Contact</h6>
-     <p id="toggle-theme" class="links"><i class="far fa-moon"></i> </p>
+     <p class="links" onclick="myFunction()"><i class="far fa-moon"></i> </p>
     </div>
   </div>
 
